--- a/index-text.html
+++ b/index-text.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title>IMAKI | Agence marketing de réseaux sociaux</title>
+  <title>Bingo | Responsive Multipurpose Parallax HTML5 Template</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
