--- a/service.html
+++ b/service.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title>Bingo | Responsive Multipurpose Parallax HTML5 Template</title>
+  <title>Imaki | Agence de marketing des réseaux sociaux</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
