--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 					    <div class="col-md-7 col-sm-7">
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
-						    		<h1 class="fh5co-lead to-animate">Développement sur le Web</h1>
-									<h2 class="fh5co-sub-lead to-animate">Publications journalières</a></h3>
+						    		<h1 class="fh5co-lead to-animate">Mon dieu que ma copine est mignonne</h1>
+									<h2 class="fh5co-sub-lead to-animate">Elle s'appelle Lisa en plus</a></h3>
 									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">Réseaux Utilisés</a></p>
 						    	</div>
 						    </div>
@@ -107,8 +107,8 @@
 		    			<div class="col-md-7 col-md-push-1 col-md-push-5 col-sm-7 col-sm-push-1 col-sm-push-5">
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
-						    		<h1 class="fh5co-lead to-animate">Case Study Title</h1>
-									<h2 class="fh5co-sub-lead to-animate">100% Free Fully Responsive HTML5 Bootstrap Template. Crafted with love by the fine folks at <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a></h3>
+						    		<h1 class="fh5co-lead to-animate">Publicités Instagram</h1>
+									<h2 class="fh5co-sub-lead to-animate">Publications de haute qualité publiées sur Instagram</a></h3>
 									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">View Case Study</a></p>
 						    	</div>
 						    </div>
@@ -128,8 +128,8 @@
 		    			<div class="col-md-8 col-md-offset-2 text-center">
 		    				<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
-		    						<h1 class="fh5co-lead to-animate">Grab it now for free!</h1>
-									<h2 class="fh5co-sub-lead to-animate">100% Free Fully Responsive HTML5 Bootstrap Template. Crafted with love by the fine folks at <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a></h3>
+		    						<h1 class="fh5co-lead to-animate">Publicités Facebook !</h1>
+									<h2 class="fh5co-sub-lead to-animate">Campagnes publicitaires ciblées avec Facebook Ads</a></h3>
 									<p class="to-animate-2"><a href="http://freehtml5.co/" target="_blank" class="btn btn-primary btn-lg">Download This Template</a></p>
 								</div>
 							</div>
