--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
 	<div id="slider" data-section="home">
 		<div class="owl-carousel owl-carousel-fullwidth">
 			<!-- You may change the background color here. -->
-		    <div class="item" style="background: #352f44;">
+		    <div class="item" style="background: #2a0e46;">
 		    	<div class="container" style="position: relative;">
 		    		<div class="row">
 					    <div class="col-md-7 col-sm-7">
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
-						    		<h1 class="fh5co-lead to-animate">Mon dieu que ma copine est mignonne</h1>
-									<h2 class="fh5co-sub-lead to-animate">Elle s'appelle Lisa en plus</a></h3>
+						    		<h1 class="fh5co-lead to-animate">Développement de stratégies commerciales</h1>
+									<h2 class="fh5co-sub-lead to-animate">Publicités Journalières</a></h3>
 									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">Réseaux Utilisés</a></p>
 						    	</div>
 						    </div>
@@ -107,8 +107,8 @@
 		    			<div class="col-md-7 col-md-push-1 col-md-push-5 col-sm-7 col-sm-push-1 col-sm-push-5">
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
-						    		<h1 class="fh5co-lead to-animate">Publicités Instagram</h1>
-									<h2 class="fh5co-sub-lead to-animate">Publications de haute qualité publiées sur Instagram</a></h3>
+						    		<h1 class="fh5co-lead to-animate">Publicités Meta</h1>
+									<h2 class="fh5co-sub-lead to-animate">Publications de haute qualité publiées sur Instagram et Facebook</a></h3>
 									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">View Case Study</a></p>
 						    	</div>
 						    </div>
