--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 					    <div class="col-md-7 col-sm-7">
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
-						    		<h1 class="fh5co-lead to-animate">Développement de stratégies commerciales</h1>
-									<h2 class="fh5co-sub-lead to-animate">Publicités Journalières</a></h3>
-									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">Réseaux Utilisés</a></p>
+						    		<h1 class="fh5co-lead to-animate"></h1>
+									<h2 class="fh5co-sub-lead to-animate">Bien plus de clients</h2>
+									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">Multiplication du nombre de clients par 2</a></p>
 						    	</div>
 						    </div>
 					    </div>
@@ -100,16 +100,15 @@
 		    		</div>
 		    	</div>
 		    </div>
-			<!-- You may change the background color here.  -->
 		    <div class="item" style="background: #38569f;">
 		    	<div class="container" style="position: relative;">
 		    		<div class="row">
 		    			<div class="col-md-7 col-md-push-1 col-md-push-5 col-sm-7 col-sm-push-1 col-sm-push-5">
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
-						    		<h1 class="fh5co-lead to-animate">Publicités Meta</h1>
+						    		<h1 class="fh5co-lead to-animate">Développement de stratégies commerciales</h1>
 									<h2 class="fh5co-sub-lead to-animate">Publications de haute qualité publiées sur Instagram et Facebook</a></h3>
-									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">View Case Study</a></p>
+									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">Voir les services</a></p>
 						    	</div>
 						    </div>
 					    </div>
@@ -128,9 +127,9 @@
 		    			<div class="col-md-8 col-md-offset-2 text-center">
 		    				<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
-		    						<h1 class="fh5co-lead to-animate">Publicités Facebook !</h1>
-									<h2 class="fh5co-sub-lead to-animate">Campagnes publicitaires ciblées avec Facebook Ads</a></h3>
-									<p class="to-animate-2"><a href="http://freehtml5.co/" target="_blank" class="btn btn-primary btn-lg">Download This Template</a></p>
+		    						<h1 class="fh5co-lead to-animate">Satisfait ou remboursé</h1>
+									<h2 class="fh5co-sub-lead to-animate">Si nous ne parvenons pas à atteindre vos objectifs, nous vous remboursons complètement</a></h3>
+									<p class="to-animate-2"><a href="http://freehtml5.co/" target="_blank" class="btn btn-primary btn-lg">Voir les tarifs</a></p>
 								</div>
 							</div>
 		    			</div>
@@ -148,7 +147,7 @@
 					<h2 class="to-animate">À propos de nous</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 to-animate">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
+							<h3>Nous sommes une petite équipe de passionés de marketing formée en 2022. Notre objectif est de faire profiter notre passion à nos partenaires :)</h3>
 						</div>
 					</div>
 				</div>
@@ -156,18 +155,17 @@
 					<img src="images/img_1.jpg" class="img-responsive img-rounded" alt="Free HTML5 Template">
 				</div>
 				<div class="col-md-4 to-animate">
-					<h2>How we got started</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
-					<p>It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day.</p>
-					<p><a href="#" class="btn btn-primary">Meet the team</a></p>
-				</div>
+					<h2>D'où venons nous</h2>
+					<p>Nous sommes 2 étudiants en en mathématiques/informatique et marketing. Nous nous sommes rencontrés au lycée et avions prit comme objectif de fonder une entreprise en marketing.</p>
+					<p></p>
+					</div>
 			</div>
 			
 	<div id="fh5co-our-services" data-section="services">
 		<div class="container">
 			<div class="row row-bottom-padded-sm">
 				<div class="col-md-12 section-heading text-center">
-					<h2 class="to-animate">Our Services</h2>
+					<h2 class="to-animate">Nos Services</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 to-animate">
 							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
@@ -178,38 +176,38 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="box to-animate">
-						<div class="icon colored-1"><span><i class="icon-mustache"></i></span></div>
-						<h3>100% free</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+						<div class="icon colored-1"><span><i class="icon-black-tie"></i></span></div>
+						<h3>Professionelles</h3>
+						<p>Publicités de haute qualité, difficile à discerner de véritables publications</p>
 					</div>
 					<div class="box to-animate">
 						<div class="icon colored-4"><span><i class="icon-heart"></i></span></div>
-						<h3>Made with love</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<h3>Faites avec amour</h3>
+						<p>Nous estimons grandement notre travail et mettons le coeur à l'ouvrage</p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="box to-animate">
-						<div class="icon colored-2"><span><i class="icon-screen-desktop"></i></span></div>
-						<h3>Fully responsive</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<div class="icon colored-2"><span><i class="icon-mobile"></i></span></div>
+						<h3>Multi-plateformes</h3>
+						<p>Les publicités seront disponibles sur Instagram, Facebook, Snapchat et Twitter</p>
 					</div>
 					<div class="box to-animate">
 						<div class="icon colored-5"><span><i class="icon-rocket"></i></span></div>
-						<h3>Fast &amp; light</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+						<h3>Rapides &amp; Concises</h3>
+						<p>Les publicités sont faciles à lire et donnent envie de cliquer</p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="box to-animate">
 						<div class="icon colored-3"><span><i class="icon-eye"></i></span></div>
-						<h3>Retina-ready</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+						<h3>Publicités intéressantes</h3>
+						<p>Publicités colorées avec un grand taux de rétention</p>
 					</div>
 					<div class="box to-animate">
-						<div class="icon colored-6"><span><i class="icon-user"></i></span></div>
-						<h3>For creative like you!</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<div class="icon colored-6"><span><i class="icon-star2"></i></span></div>
+						<h3>Pour des entreprises en soins et beauté</h3>
+						<p>Nous nous spécialisons dans ce domaine</p>
 					</div>
 				</div>
 			</div>
@@ -300,10 +298,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 section-heading text-center">
-					<h2 class="single-animate animate-press-1">Press Releases</h2>
+					<h2 class="single-animate animate-press-1">Portefolio</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-press-2">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
+							<h3>Voici des extraits de publicités que certains clients nous ont autorisé à utiliser</h3>
 						</div>
 					</div>
 				</div>
@@ -373,20 +371,15 @@
 	<footer id="footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-bottom-padded-sm">
-				<div class="col-md-12">
-					<p class="copyright text-center">&copy; 2015 Free <a href="index.html">Crew</a>. All Rights Reserved. <br> Free HTML5 Template by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> | Images by <a href="http://pexels.com/" target="_blank">Pexels</a> &amp;  <a href="http://unsplash.com/" target="_blank">Unsplash</a></p>
-				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<ul class="social social-circle">
-						<li><a href="#"><i class="icon-twitter"></i></a></li>
+						<li><a href="#"><i class="icon-instagram"></i></a></li>
 						<li><a href="#"><i class="icon-facebook"></i></a></li>
+						<li><a href="#"><i class="icon-twitter"></i></a></li>
 						<li><a href="#"><i class="icon-youtube"></i></a></li>
 						<li><a href="#"><i class="icon-pinterest"></i></a></li>
-						<li><a href="#"><i class="icon-linkedin"></i></a></li>
-						<li><a href="#"><i class="icon-instagram"></i></a></li>
-						<li><a href="#"><i class="icon-dribbble"></i></a></li>
 					</ul>
 				</div>
 			</div>
