--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>IMAKI MEDIA</title>
+	<title>IMAKI</title>
+	<link rel="icon" type="image/x-icon" href="/images/icons/imaki_icon_white_transparent.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Agence de Marketing de Réseaux Sociaux" />
 	<meta name="keywords" content="marketing, réseaux sociaux, conseils, pubs, pub, publicité" />
@@ -62,11 +63,11 @@
 		        <div class="navbar-header">
 		        	<!-- Mobile Toggle Menu Button -->
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
-		          	<a class="navbar-brand" href="index.html">IMAKI MEDIA</a> 
+		          	<a class="navbar-brand" href="index.html">IMAKI</a> 
 		        </div>
 		        <div id="navbar" class="navbar-collapse collapse">
 		          <ul class="nav navbar-nav navbar-right">
-		            <li class="active"><a href="#" data-nav-section="home"><span>Home</span></a></li>
+		            <li class="active"><a href="#" data-nav-section="home"><span>Accueil</span></a></li>
 		            <li><a href="#" data-nav-section="about"><span>À propos</span></a></li>
 		            <li><a href="#" data-nav-section="services"><span>Services</span></a></li>
 		            <li><a href="#" data-nav-section="pricing"><span>Tarifs</span></a></li>
