--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 		            <li class="active"><a href="#" data-nav-section="home"><span>Accueil</span></a></li>
 		            <li><a href="#" data-nav-section="about"><span>À propos</span></a></li>
 		            <li><a href="#" data-nav-section="services"><span>Services</span></a></li>
-		            <li><a href="#" data-nav-section="pricing"><span>Tarifs</span></a></li>
-		            <li><a href="#" data-nav-section="press"><span>Publications</span></a></li>
+		            <li><a href="#" data-nav-section="pricing"><span>Prendre Rendez-vous</span></a></li>
+		            <li><a href="#press" data-nav-section="press"><span>Portefolio</span></a></li>
 		          </ul>
 		        </div>
 			    </nav>
@@ -88,8 +88,8 @@
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
 						    		<h1 class="fh5co-lead to-animate"></h1>
-									<h2 class="fh5co-sub-lead to-animate">Bien plus de clients</h2>
-									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">Multiplication du nombre de clients par 2</a></p>
+									<h2 class="fh5co-sub-lead to-animate">Besoin d'augmenter drastiquement votre nombre de clients ?</h2>
+									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">Voir les services</a></p>
 						    	</div>
 						    </div>
 					    </div>
@@ -108,7 +108,7 @@
 						    	<div class="fh5co-owl-text">
 						    		<h1 class="fh5co-lead to-animate">Développement de stratégies commerciales</h1>
 									<h2 class="fh5co-sub-lead to-animate">Publications de haute qualité publiées sur Instagram et Facebook</a></h3>
-									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">Voir les services</a></p>
+									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">Voir le Portefolio</a></p>
 						    	</div>
 						    </div>
 					    </div>
@@ -156,7 +156,7 @@
 				</div>
 				<div class="col-md-4 to-animate">
 					<h2>D'où venons nous</h2>
-					<p>Nous sommes 2 étudiants en en mathématiques/informatique et marketing. Nous nous sommes rencontrés au lycée et avions prit comme objectif de fonder une entreprise en marketing.</p>
+					<p>2 étudiants en mathématiques/informatique et marketing, nous nous sommes rencontrés au lycée et avions prit comme objectif de fonder une entreprise en marketing.</p>
 					<p></p>
 					</div>
 			</div>
@@ -168,7 +168,7 @@
 					<h2 class="to-animate">Nos Services</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 to-animate">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
+							<h3>Voici les caractéristiques de nos services</h3>
 						</div>
 					</div>
 				</div>
@@ -216,81 +216,31 @@
 
 	<div id="fh5co-pricing" data-section="pricing">
 		<div class="container">
-			<div class="row">
 				<div class="col-md-12 section-heading text-center">
-					<h2 class="single-animate animate-pricing-1">Pricing</h2>
+					<h2 class="single-animate animate-pricing-1">Prendre rendez-vous</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
+							<h3>Vous pouvez prendre rendez-vous en utilisant la plateforme Calendly afin de réaliser une téléconsultation</h3>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-3 col-sm-6">
-					<div class="price-box to-animate">
-						<h2 class="pricing-plan">Starter</h2>
-						<div class="price"><sup class="currency">$</sup>7<small>/mo</small></div>
-						<p>Basic customer support for small business</p>
-						<hr>
-						<ul class="pricing-info">
-							<li>10 projects</li>
-							<li>20 Pages</li>
-							<li>20 Emails</li>
-							<li>100 Images</li>
-						</ul>
-						<a href="#" class="btn btn-default btn-sm">Get started</a>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6">
-					<div class="price-box to-animate">
-						<h2 class="pricing-plan">Regular</h2>
-						<div class="price"><sup class="currency">$</sup>19<small>/mo</small></div>
-						<p>Basic customer support for small business</p>
-						<hr>
-						<ul class="pricing-info">
-							<li>15 projects</li>
-							<li>40 Pages</li>
-							<li>40 Emails</li>
-							<li>200 Images</li>
-						</ul>
-						<a href="#" class="btn btn-default btn-sm">Get started</a>
-					</div>
-				</div>
-				<div class="clearfix visible-sm-block"></div>
-				<div class="col-md-3 col-sm-6 to-animate">
-					<div class="price-box popular">
-						<div class="popular-text">Best value</div>
-						<h2 class="pricing-plan">Plus</h2>
-						<div class="price"><sup class="currency">$</sup>79<small>/mo</small></div>
-						<p>Basic customer support for small business</p>
-						<hr>
-						<ul class="pricing-info">
-							<li>Unlimitted projects</li>
-							<li>100 Pages</li>
-							<li>100 Emails</li>
-							<li>700 Images</li>
-						</ul>
-						<a href="#" class="btn btn-primary btn-sm">Get started</a>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6">
-					<div class="price-box to-animate">
-						<h2 class="pricing-plan">Enterprise</h2>
-						<div class="price"><sup class="currency">$</sup>125<small>/mo</small></div>
-						<p>Basic customer support for small business</p>
-						<hr>
-						<ul class="pricing-info">
-							<li>Unlimitted projects</li>
-							<li>Unlimitted Pages</li>
-							<li>Unlimitted Emails</li>
-							<li>Unlimitted Images</li>
-						</ul>
-						<a href="#" class="btn btn-default btn-sm">Get started</a>
-					</div>
-				</div>
-				
-			</div>
+				<!-- Début de widget en ligne Calendly -->
+				<div class="calendly-inline-widget" data-url="https://calendly.com/imaki/contact?hide_event_type_details=0&primary_color=6173f4" style="min-width:320px;height:630px;"></div>
+				<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+				<!-- Fin de widget en ligne Calendly -->
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		
 		</div>
 	</div>
 
@@ -310,10 +260,10 @@
 				<div class="col-md-6">
 					<!-- Press Item -->
 					<div class="fh5co-press-item to-animate">
-						<div class="fh5co-press-img" style="background-image: url(images/img_7.jpg)">
+						<div class="fh5co-press-img" style="background-image: url(images/ads/01.png)">
 						</div>
 						<div class="fh5co-press-text">
-							<h3 class="h2 fh5co-press-title">Simplicity <span class="fh5co-border"></span></h3>
+							<h3 class="h2 fh5co-press-title">Simplicité <span class="fh5co-border"></span></h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eius quos similique suscipit dolorem cumque vitae qui molestias illo accusantium...</p>
 							<p><a href="#" class="btn btn-primary btn-sm">Learn more</a></p>
 						</div>
