--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 		            <li class="active"><a href="#" data-nav-section="home"><span>Accueil</span></a></li>
 		            <li><a href="#" data-nav-section="about"><span>À propos</span></a></li>
 		            <li><a href="#" data-nav-section="services"><span>Services</span></a></li>
-		            <li><a href="#" data-nav-section="pricing"><span>Prendre Rendez-vous</span></a></li>
-		            <li><a href="#press" data-nav-section="press"><span>Portefolio</span></a></li>
+		            <li><a href="#" data-nav-section="pricing"><span>Prendre rendez-vous</span></a></li>
+		            <li><a href="#" data-nav-section="press"><span>Portefolio</span></a></li>
 		          </ul>
 		        </div>
 			    </nav>
@@ -89,12 +89,12 @@
 						    	<div class="fh5co-owl-text">
 						    		<h1 class="fh5co-lead to-animate"></h1>
 									<h2 class="fh5co-sub-lead to-animate">Besoin d'augmenter drastiquement votre nombre de clients ?</h2>
-									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">Voir les services</a></p>
+									<p class="to-animate-2"><a data-nav-section="services" class="btn btn-primary btn-lg">Voir comment</a></p>
 						    	</div>
 						    </div>
 					    </div>
 					    <div class="col-md-4 col-md-push-1 col-sm-4 col-sm-push-1 iphone-image">
-					    	<div class="iphone to-animate-2"><img src="images/icons/imaki_logo_white_transparent.png" alt="Free HTML5 Template by FREEHTML5.co"></div>
+					    	<div class="iphone to-animate-2"><img src="images/stocks/003.jpg" alt="Free HTML5 Template by FREEHTML5.co"></div>
 					    </div>
 
 		    		</div>
@@ -108,19 +108,19 @@
 						    	<div class="fh5co-owl-text">
 						    		<h1 class="fh5co-lead to-animate">Développement de stratégies commerciales</h1>
 									<h2 class="fh5co-sub-lead to-animate">Publications de haute qualité publiées sur Instagram et Facebook</a></h3>
-									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">Voir le Portefolio</a></p>
+									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg" data-nav-section="press">Voir le Portefolio</a></p>
 						    	</div>
 						    </div>
 					    </div>
 					    <div class="col-md-4 col-md-pull-7 col-sm-4 col-sm-pull-7 iphone-image">
-					    	<div class="iphone to-animate-2"><img src="images/iphone-1.png" alt="Free HTML5 Template by FREEHTML5.co"></div>
+					    	<div class="iphone to-animate-2"><img src="images/stocks/001.jpeg" alt="Free HTML5 Template by FREEHTML5.co"></div>
 					    </div>
 
 		    		</div>
 		    	</div>
 		    </div>
 
-		    <div class="item" style="background-image:url(images/slide_5.jpg)">
+		    <div class="item" style="background-image:url(images/stocks/002.jpg)">
 		    	<div class="overlay"></div>
 		    	<div class="container" style="position: relative;">
 		    		<div class="row">
@@ -128,8 +128,8 @@
 		    				<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
 		    						<h1 class="fh5co-lead to-animate">Satisfait ou remboursé</h1>
-									<h2 class="fh5co-sub-lead to-animate">Si nous ne parvenons pas à atteindre vos objectifs, nous vous remboursons complètement</a></h3>
-									<p class="to-animate-2"><a href="http://freehtml5.co/" target="_blank" class="btn btn-primary btn-lg">Voir les tarifs</a></p>
+									<h2 class="fh5co-sub-lead to-animate">Si nous ne parvenons pas à atteindre vos objectifs, nous vous remboursons entièrement</a></h3>
+									<p class="to-animate-2"><a data-nav-section="pricing" class="btn btn-primary btn-lg">Prendre rendez-vous</a></p>
 								</div>
 							</div>
 		    			</div>
@@ -147,16 +147,16 @@
 					<h2 class="to-animate">À propos de nous</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 to-animate">
-							<h3>Nous sommes une petite équipe de passionés de marketing formée en 2022. Notre objectif est de faire profiter notre passion à nos partenaires :)</h3>
+							<h3>Nous sommes une petite équipe de passionés de marketing formée en 2022. Notre objectif est de faire profiter notre passion à nos partenaires</h3>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-8 to-animate">
-					<img src="images/img_1.jpg" class="img-responsive img-rounded" alt="Free HTML5 Template">
+					<img src="images/meaux.webp" class="img-responsive img-rounded">
 				</div>
 				<div class="col-md-4 to-animate">
 					<h2>D'où venons nous</h2>
-					<p>2 étudiants en mathématiques/informatique et marketing, nous nous sommes rencontrés au lycée et avions prit comme objectif de fonder une entreprise en marketing.</p>
+					<p>2 étudiants en mathématiques/informatique et marketing, nous nous sommes rencontrés à Meaux et avions prit comme objectif de fonder une entreprise en marketing.</p>
 					<p></p>
 					</div>
 			</div>
@@ -194,7 +194,7 @@
 					</div>
 					<div class="box to-animate">
 						<div class="icon colored-5"><span><i class="icon-rocket"></i></span></div>
-						<h3>Rapides &amp; Concises</h3>
+						<h3>Rapides et Concises</h3>
 						<p>Les publicités sont faciles à lire et donnent envie de cliquer</p>
 					</div>
 				</div>
@@ -220,29 +220,16 @@
 					<h2 class="single-animate animate-pricing-1">Prendre rendez-vous</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2">
-							<h3>Vous pouvez prendre rendez-vous en utilisant la plateforme Calendly afin de réaliser une téléconsultation</h3>
+							<h3>Utilisez Calendly afin de prendre rendez-vous en téléconsultation</h3>
 						</div>
+						<!-- Début de widget en ligne Calendly -->
+						<div class="calendly-inline-widget" data-url="https://calendly.com/imaki/contact?hide_event_type_details=0&primary_color=6173f4" style="min-width:320px;height:700px;"></div>
+						<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+						<!-- Fin de widget en ligne Calendly -->
 					</div>
 				</div>
-				<!-- Début de widget en ligne Calendly -->
-				<div class="calendly-inline-widget" data-url="https://calendly.com/imaki/contact?hide_event_type_details=0&primary_color=6173f4" style="min-width:320px;height:630px;"></div>
-				<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-				<!-- Fin de widget en ligne Calendly -->
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		
+			</div>
 		</div>
-	</div>
 
 	<div id="fh5co-press" data-section="press">
 		<div class="container">
@@ -251,7 +238,7 @@
 					<h2 class="single-animate animate-press-1">Portefolio</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-press-2">
-							<h3>Voici des extraits de publicités que certains clients nous ont autorisé à utiliser</h3>
+							<h3>Voici quelques exemples de publicités</h3>
 						</div>
 					</div>
 				</div>
@@ -325,11 +312,11 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<ul class="social social-circle">
-						<li><a href="#"><i class="icon-instagram"></i></a></li>
-						<li><a href="#"><i class="icon-facebook"></i></a></li>
-						<li><a href="#"><i class="icon-twitter"></i></a></li>
-						<li><a href="#"><i class="icon-youtube"></i></a></li>
-						<li><a href="#"><i class="icon-pinterest"></i></a></li>
+						<li><a href="https://www.instagram.com/imaki_off/" target="_blank"><i class="icon-instagram"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-facebook" ></i></a></li>
+						<li><a href="https://twitter.com/AgenceImaki" target="_blank"><i class="icon-twitter"></i></a></li>
+						<li><a href="#"><i class="icon-youtube" target="_blank"></i></a></li>
+						<li><a href="https://www.pinterest.fr/IMAKI_OFF/" target="_blank"><i class="icon-pinterest"></i></a></li>
 					</ul>
 				</div>
 			</div>
