--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 	<meta property="og:url" content=""/>
 	<meta property="og:site_name" content=""/>
 	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+	<meta name="twitter:title" content="IMAKI - Agence de Marketing des Réseaux" />
+	<meta name="twitter:image" content="https://twitter.com/AgenceImaki/photo" />
+	<meta name="twitter:url" content="https://twitter.com/AgenceImaki" />
+	<meta name="twitter:card" content="https://twitter.com/AgenceImaki/header_photo" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="imaki_icon_white_transparent.ico">
@@ -247,7 +247,7 @@
 				<div class="col-md-6">
 					<!-- Press Item -->
 					<div class="fh5co-press-item to-animate">
-						<div class="fh5co-press-img" style="background-image: url(images/ads/01.png)">
+						<div class="fh5co-press-img" style="background-image: url(images/ads/01.png)" >
 						</div>
 						<div class="fh5co-press-text">
 							<h3 class="h2 fh5co-press-title">Simplicité <span class="fh5co-border"></span></h3>
