--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 		        <div id="navbar" class="navbar-collapse collapse">
 		          <ul class="nav navbar-nav navbar-right">
 		            <li class="active"><a href="#" data-nav-section="home"><span>Accueil</span></a></li>
-		            <li><a href="#" data-nav-section="about"><span>À propos</span></a></li>
-		            <li><a href="#" data-nav-section="services"><span>Services</span></a></li>
-		            <li><a href="#" data-nav-section="pricing"><span>Prendre rendez-vous</span></a></li>
-		            <li><a href="#" data-nav-section="press"><span>Portefolio</span></a></li>
+		            <li><a data-nav-section="about"><span>À propos</span></a></li>
+		            <li><a data-nav-section="services"><span>Services</span></a></li>
+		            <li><a data-nav-section="pricing"><span>Prendre rendez-vous</span></a></li>
+		            <li><a data-nav-section="press"><span>Portfolio</span></a></li>
 		          </ul>
 		        </div>
 			    </nav>
@@ -108,7 +108,7 @@
 						    	<div class="fh5co-owl-text">
 						    		<h1 class="fh5co-lead to-animate">Développement de stratégies commerciales</h1>
 									<h2 class="fh5co-sub-lead to-animate">Publications de haute qualité publiées sur Instagram et Facebook</a></h3>
-									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg" data-nav-section="press">Voir le Portefolio</a></p>
+									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg" data-nav-section="press">Voir le Portfolio</a></p>
 						    	</div>
 						    </div>
 					    </div>
@@ -235,7 +235,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 section-heading text-center">
-					<h2 class="single-animate animate-press-1">Portefolio</h2>
+					<h2 class="single-animate animate-press-1">Portfolio</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-press-2">
 							<h3>Voici quelques exemples de publicités</h3>
@@ -251,8 +251,8 @@
 						</div>
 						<div class="fh5co-press-text">
 							<h3 class="h2 fh5co-press-title">Simplicité <span class="fh5co-border"></span></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eius quos similique suscipit dolorem cumque vitae qui molestias illo accusantium...</p>
-							<p><a href="#" class="btn btn-primary btn-sm">Learn more</a></p>
+							<p>Les designs sont simples et épurés de manière à que l'inconscient de votre clientèle soit marqué par le service/produit</p>
+							<p><a data-nav-section="pricing" class="btn btn-primary btn-sm">Se simplifier la vie</a></p>
 						</div>
 					</div>
 					<!-- Press Item -->
@@ -261,12 +261,12 @@
 				<div class="col-md-6">
 					<!-- Press Item -->
 					<div class="fh5co-press-item to-animate">
-						<div class="fh5co-press-img" style="background-image: url(images/img_8.jpg)">
+						<div class="fh5co-press-img" style="background-image: url(images/ads/02.png)">
 						</div>
 						<div class="fh5co-press-text">
 							<h3 class="h2 fh5co-press-title">Versatile <span class="fh5co-border"></span></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eius quos similique suscipit dolorem cumque vitae qui molestias illo accusantium...</p>
-							<p><a href="#" class="btn btn-primary btn-sm">Learn more</a></p>
+							<p>Nombreux styles et variétés d'annonces afin de cibler efficacement et correctement chaque clientèle</p>
+							<p><a data-nav-section="pricing" class="btn btn-primary btn-sm">Se diversifier</a></p>
 						</div>
 					</div>
 					<!-- Press Item -->
@@ -275,12 +275,12 @@
 				<div class="col-md-6">
 					<!-- Press Item -->
 					<div class="fh5co-press-item to-animate">
-						<div class="fh5co-press-img" style="background-image: url(images/img_9.jpg);">
+						<div class="fh5co-press-img" style="background-image: url(images/ads/03.png);">
 						</div>
 						<div class="fh5co-press-text">
-							<h3 class="h2 fh5co-press-title">Aesthetic <span class="fh5co-border"></span></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eius quos similique suscipit dolorem cumque vitae qui molestias illo accusantium...</p>
-							<p><a href="#" class="btn btn-primary btn-sm">Learn more</a></p>
+							<h3 class="h2 fh5co-press-title">Esthétique <span class="fh5co-border"></span></h3>
+							<p>Annonces sachant se démarquer de la concurrence par leur esthétique et leur originalité</p>
+							<p><a data-nav-section="pricing" class="btn btn-primary btn-sm">Embellir son image</a></p>
 						</div>
 					</div>
 					<!-- Press Item -->
@@ -292,9 +292,9 @@
 						<div class="fh5co-press-img" style="background-image: url(images/img_10.jpg);">
 						</div>
 						<div class="fh5co-press-text">
-							<h3 class="h2 fh5co-press-title">Creative <span class="fh5co-border"></span></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eius quos similique suscipit dolorem cumque vitae qui molestias illo accusantium...</p>
-							<p><a href="#" class="btn btn-primary btn-sm">Learn more</a></p>
+							<h3 class="h2 fh5co-press-title">Créatif <span class="fh5co-border"></span></h3>
+							<p>Aidez-nous à agrandir notre portfolio en prenant rendez-vous dès maintenant !</p>
+							<p><a data-nav-section="pricing" class="btn btn-primary btn-sm">Nous aider</a></p>
 						</div>
 					</div>
 					<!-- Press Item -->
