--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		            <li><a data-nav-section="about"><span>À propos</span></a></li>
 		            <li><a data-nav-section="services"><span>Services</span></a></li>
 		            <li><a data-nav-section="pricing"><span>Prendre rendez-vous</span></a></li>
-		            <li><a data-nav-section="press"><span>Portfolio</span></a></li>
+		            <!--<li><a data-nav-section="press"><span>Portfolio</span></a></li>-->
 		          </ul>
 		        </div>
 			    </nav>
@@ -89,12 +89,12 @@
 						    	<div class="fh5co-owl-text">
 						    		<h1 class="fh5co-lead to-animate"></h1>
 									<h2 class="fh5co-sub-lead to-animate">Besoin d'augmenter drastiquement votre nombre de clients ?</h2>
-									<p class="to-animate-2"><a data-nav-section="services" class="btn btn-primary btn-lg">Voir comment</a></p>
+									<p class="to-animate-2"><a data-nav-section="services" class="btn btn-primary btn-lg">Développer son entreprise en ligne</a></p>
 						    	</div>
 						    </div>
 					    </div>
 					    <div class="col-md-4 col-md-push-1 col-sm-4 col-sm-push-1 iphone-image">
-					    	<div class="iphone to-animate-2"><img src="images/stocks/003.jpg" alt="Free HTML5 Template by FREEHTML5.co"></div>
+					    	<div class="iphone to-animate-2"><img src="images/stocks/burgerham.jpg" alt="Free HTML5 Template by FREEHTML5.co"></div>
 					    </div>
 
 		    		</div>
@@ -113,7 +113,7 @@
 						    </div>
 					    </div>
 					    <div class="col-md-4 col-md-pull-7 col-sm-4 col-sm-pull-7 iphone-image">
-					    	<div class="iphone to-animate-2"><img src="images/stocks/001.jpeg" alt="Free HTML5 Template by FREEHTML5.co"></div>
+					    	<div class="iphone to-animate-2"><img src="images/stocks/team_behind_computer.jpg" alt="Free HTML5 Template by FREEHTML5.co"></div>
 					    </div>
 
 		    		</div>
@@ -156,7 +156,7 @@
 				</div>
 				<div class="col-md-4 to-animate">
 					<h2>D'où venons nous</h2>
-					<p>2 étudiants en mathématiques/informatique et marketing, nous nous sommes rencontrés à Meaux et avions prit comme objectif de fonder une entreprise en marketing.</p>
+					<p>2 étudiants en mathématiques/informatique et marketing, nous nous sommes rencontrés à Meaux et avions pris comme objectif de fonder une entreprise en marketing.</p>
 					<p></p>
 					</div>
 			</div>
@@ -204,11 +204,6 @@
 						<h3>Publicités intéressantes</h3>
 						<p>Publicités colorées avec un grand taux de rétention</p>
 					</div>
-					<div class="box to-animate">
-						<div class="icon colored-6"><span><i class="icon-star2"></i></span></div>
-						<h3>Pour des entreprises en soins et beauté</h3>
-						<p>Nous nous spécialisons dans ce domaine</p>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -230,7 +225,7 @@
 				</div>
 			</div>
 		</div>
-
+<!--
 	<div id="fh5co-press" data-section="press">
 		<div class="container">
 			<div class="row">
@@ -245,7 +240,6 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6">
-					<!-- Press Item -->
 					<div class="fh5co-press-item to-animate">
 						<div class="fh5co-press-img" style="background-image: url(images/ads/01.png)" >
 						</div>
@@ -255,11 +249,9 @@
 							<p><a data-nav-section="pricing" class="btn btn-primary btn-sm">Se simplifier la vie</a></p>
 						</div>
 					</div>
-					<!-- Press Item -->
 				</div>
 
 				<div class="col-md-6">
-					<!-- Press Item -->
 					<div class="fh5co-press-item to-animate">
 						<div class="fh5co-press-img" style="background-image: url(images/ads/02.png)">
 						</div>
@@ -269,11 +261,9 @@
 							<p><a data-nav-section="pricing" class="btn btn-primary btn-sm">Se diversifier</a></p>
 						</div>
 					</div>
-					<!-- Press Item -->
 				</div>
 				
 				<div class="col-md-6">
-					<!-- Press Item -->
 					<div class="fh5co-press-item to-animate">
 						<div class="fh5co-press-img" style="background-image: url(images/ads/03.png);">
 						</div>
@@ -282,12 +272,9 @@
 							<p>Annonces sachant se démarquer de la concurrence par leur esthétique et leur originalité</p>
 							<p><a data-nav-section="pricing" class="btn btn-primary btn-sm">Embellir son image</a></p>
 						</div>
-					</div>
-					<!-- Press Item -->
 				</div>
 
 				<div class="col-md-6">
-					<!-- Press Item -->
 					<div class="fh5co-press-item to-animate">
 						<div class="fh5co-press-img" style="background-image: url(images/img_10.jpg);">
 						</div>
@@ -297,13 +284,12 @@
 							<p><a data-nav-section="pricing" class="btn btn-primary btn-sm">Nous aider</a></p>
 						</div>
 					</div>
-					<!-- Press Item -->
 				</div>
 
 			</div>
 		</div>
 	</div>
-	
+		-->
 
 	<footer id="footer" role="contentinfo">
 		<div class="container">
