--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						    	<div class="fh5co-owl-text">
 						    		<h1 class="fh5co-lead to-animate">Développement de stratégies commerciales</h1>
 									<h2 class="fh5co-sub-lead to-animate">Publications de haute qualité publiées sur Instagram et Facebook</a></h3>
-									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg" data-nav-section="press">Voir le Portfolio</a></p>
+									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg" data-nav-section="pricing">Voir les services</a></p>
 						    	</div>
 						    </div>
 					    </div>
