--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						    </div>
 					    </div>
 					    <div class="col-md-4 col-md-push-1 col-sm-4 col-sm-push-1 iphone-image">
-					    	<div class="iphone to-animate-2"><img src="images/stocks/burgerham.jpg" alt="Free HTML5 Template by FREEHTML5.co"></div>
+					    	<div class="iphone to-animate-2"><img src="images/stocks/installing_pannel_3.jpg" alt="Free HTML5 Template by FREEHTML5.co"></div>
 					    </div>
 
 		    		</div>
@@ -113,14 +113,14 @@
 						    </div>
 					    </div>
 					    <div class="col-md-4 col-md-pull-7 col-sm-4 col-sm-pull-7 iphone-image">
-					    	<div class="iphone to-animate-2"><img src="images/stocks/team_behind_computer.jpg" alt="Free HTML5 Template by FREEHTML5.co"></div>
+					    	<div class="iphone to-animate-2"><img src="images/stocks/man_behind_laptop.jpg" alt="Free HTML5 Template by FREEHTML5.co"></div>
 					    </div>
 
 		    		</div>
 		    	</div>
 		    </div>
 
-		    <div class="item" style="background-image:url(images/stocks/002.jpg)">
+		    <div class="item" style="background-image:url(images/stocks/bg_solar.jpg)">
 		    	<div class="overlay"></div>
 		    	<div class="container" style="position: relative;">
 		    		<div class="row">
@@ -299,9 +299,8 @@
 				<div class="col-md-12 text-center">
 					<ul class="social social-circle">
 						<li><a href="https://www.instagram.com/imaki_off/" target="_blank"><i class="icon-instagram"></i></a></li>
-						<li><a href="#" target="_blank"><i class="icon-facebook" ></i></a></li>
+						<li><a href="https://www.facebook.com/profile.php?id=100088852639508" target="_blank"><i class="icon-facebook" ></i></a></li>
 						<li><a href="https://twitter.com/AgenceImaki" target="_blank"><i class="icon-twitter"></i></a></li>
-						<li><a href="#"><i class="icon-youtube" target="_blank"></i></a></li>
 						<li><a href="https://www.pinterest.fr/IMAKI_OFF/" target="_blank"><i class="icon-pinterest"></i></a></li>
 					</ul>
 				</div>
