--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
 						    		<h1 class="fh5co-lead to-animate"></h1>
-									<h2 class="fh5co-sub-lead to-animate">Besoin d'augmenter drastiquement votre nombre de clients ?</h2>
+									<h2 class="fh5co-sub-lead to-animate">Besoin de multiplier votre nombre de clients ?</h2>
 									<p class="to-animate-2"><a data-nav-section="services" class="btn btn-primary btn-lg">Développer son entreprise en ligne</a></p>
 						    	</div>
 						    </div>
@@ -128,7 +128,7 @@
 		    				<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
 		    						<h1 class="fh5co-lead to-animate">Satisfait ou remboursé</h1>
-									<h2 class="fh5co-sub-lead to-animate">Si nous ne parvenons pas à atteindre vos objectifs, nous vous remboursons entièrement</a></h3>
+									<h2 class="fh5co-sub-lead to-animate">Si nous ne parvenons pas à satisfaire vos besoins, nous vous remboursons entièrement</a></h3>
 									<p class="to-animate-2"><a data-nav-section="pricing" class="btn btn-primary btn-lg">Prendre rendez-vous</a></p>
 								</div>
 							</div>
@@ -147,7 +147,7 @@
 					<h2 class="to-animate">À propos de nous</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 to-animate">
-							<h3>Nous sommes une petite équipe de passionés de marketing formée en 2022. Notre objectif est de faire profiter notre passion à nos partenaires</h3>
+							<h3>Nous sommes une petite équipe de passionés de technologie et marketing formée en 2022. Notre objectif est de faire profiter de notre passion à nos partenaires</h3>
 						</div>
 					</div>
 				</div>
@@ -156,7 +156,7 @@
 				</div>
 				<div class="col-md-4 to-animate">
 					<h2>D'où venons nous</h2>
-					<p>2 étudiants en mathématiques/informatique et marketing, nous nous sommes rencontrés à Meaux et avions pris comme objectif de fonder une entreprise en marketing.</p>
+					<p>2 étudiants en mathématiques, informatique et sciences physiques, nous nous sommes rencontrés à Meaux et avons pris comme objectif de fonder une entreprise en marketing.</p>
 					<p></p>
 					</div>
 			</div>
@@ -177,8 +177,8 @@
 				<div class="col-md-4">
 					<div class="box to-animate">
 						<div class="icon colored-1"><span><i class="icon-black-tie"></i></span></div>
-						<h3>Professionelles</h3>
-						<p>Publicités de haute qualité, difficile à discerner de véritables publications</p>
+						<h3>Professionnelles</h3>
+						<p>Publicités de haute qualité, difficiles à discerner de véritables publications</p>
 					</div>
 					<div class="box to-animate">
 						<div class="icon colored-4"><span><i class="icon-heart"></i></span></div>
