--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 				</div>
 				<div class="col-md-4 to-animate">
 					<h2>D'où venons nous</h2>
-					<p>2 étudiants en mathématiques, informatique et sciences physiques, nous nous sommes rencontrés à Meaux et avons pris comme objectif de fonder une entreprise en marketing.</p>
+					<p>Deux étudiants en mathématiques, informatique et sciences physiques, nous nous sommes rencontrés à Meaux et avons pris comme objectif de fonder une entreprise en marketing.</p>
 					<p></p>
 					</div>
 			</div>
