changement sytle icones

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 	<meta name="description" content="Agence de Marketing de Réseaux Sociaux" />
 	<meta name="keywords" content="marketing, réseaux sociaux, conseils, pubs, pub, publicité" />
 	<meta name="author" content="Firas" />
-
-  <!-- Facebook and Twitter integration -->
+	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
@@ -25,7 +24,7 @@
 	<meta name="twitter:card" content="https://twitter.com/AgenceImaki/header_photo" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="imaki_icon_white_transparent.ico">
+	<link rel="shortcut icon" href="icon.ico">
 
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	
@@ -67,8 +66,8 @@
 		        <div id="navbar" class="navbar-collapse collapse">
 		          <ul class="nav navbar-nav navbar-right">
 		            <li class="active"><a href="#" data-nav-section="home"><span>Accueil</span></a></li>
-		            <li><a data-nav-section="about"><span>À propos</span></a></li>
 		            <li><a data-nav-section="services"><span>Services</span></a></li>
+		            <li><a data-nav-section="about"><span>À propos</span></a></li>
 		            <li><a data-nav-section="pricing"><span>Prendre rendez-vous</span></a></li>
 		            <!--<li><a data-nav-section="press"><span>Portfolio</span></a></li>-->
 		          </ul>
@@ -94,7 +93,7 @@
 						    </div>
 					    </div>
 					    <div class="col-md-4 col-md-push-1 col-sm-4 col-sm-push-1 iphone-image">
-					    	<div class="iphone to-animate-2"><img src="images/stocks/installing_pannel_3.jpg" alt="Free HTML5 Template by FREEHTML5.co"></div>
+					    	<div class="iphone to-animate-2"><img src="images/stocks/installing_pannel_3.jpg"></div>
 					    </div>
 
 		    		</div>
@@ -113,7 +112,7 @@
 						    </div>
 					    </div>
 					    <div class="col-md-4 col-md-pull-7 col-sm-4 col-sm-pull-7 iphone-image">
-					    	<div class="iphone to-animate-2"><img src="images/stocks/man_behind_laptop.jpg" alt="Free HTML5 Template by FREEHTML5.co"></div>
+					    	<div class="iphone to-animate-2"><img src="images/stocks/man_behind_laptop.jpg"></div>
 					    </div>
 
 		    		</div>
