--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
 	</head>
 	<body>
+	
+	<a href="love.html">J'ai un code :)</a>
 	<header role="banner" id="fh5co-header">
 			<div class="container">
 				<!-- <div class="row"> -->
